clusters/calcifer-home/apps/edge-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: edge-test
spec:
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - name: http
      port: 80
      targetPort: http
