clusters/calcifer-home/apps/edge-test/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: edge-test-source-policy
  namespace: edge-test
spec:
  ipAllowList:
    sourceRange:
      - 172.31.255.1/32
      - 192.168.0.0/24
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: edge-test
  namespace: edge-test
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`edge-test.calcifer.tech`)
      middlewares:
        - name: edge-test-source-policy
      services:
        - name: whoami
          port: 80
  tls:
    secretName: edge-test-production-tls
